[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mavcore", "radar"]

[project]
name = "droneFusion"
version = "0.1.0"
description = "A package for fusing inertial, optical, thermal, and radar data for drone applications."
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "pymavlink",
    "mavproxy",
    "numpy==1.26.4",
    "scipy==1.15.3",
    "opencv-python",
    "ultralytics"
]
