[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mavcore", "radar", "camera"]

[project]
name = "droneFusion"
version = "0.1.0"
description = "A package for fusing inertial, optical, thermal, and radar data for drone applications."
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "pymavlink",
    "mavproxy",
    "numpy",
    "scipy",
    "pyusb",
    "filterpy",
#   "opencv-python", # From source
#   "ultralytics" # Follow guide for this one
]
